force-app/main/default/objects/Activity/fields/Activity_On__c.field-meta.xml
<CustomField>
    <fullName>Activity_On__c</fullName>
    <formula>CASE(LEFT(WhatId,3), 
&quot;001&quot;,&quot;Account&quot;, 
&quot;006&quot;,&quot;Opportunity&quot;, 
&quot;500&quot;,&quot;Case&quot;, 
CASE(LEFT(WhoId,3), 
&quot;003&quot;,&quot;Contact&quot;, 
&quot;00Q&quot;,&quot;Lead&quot;, 
NULL))</formula>
    <inlineHelpText>This field provides description to what object this record belongs to.</inlineHelpText>
    <label>Activity On</label>
    <type>Text</type>
</CustomField>