force-app/main/default/objects/Activity/fields/Call_Result_Detail_1__c.field-meta.xml
<CustomField>
    <fullName>Call_Result_Detail_1__c</fullName>
    <inlineHelpText>Details of the call result</inlineHelpText>
    <label>Call Result Detail 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Result__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>ARC AP</fullName>
            </value>
            <value>
                <fullName>Closed Failed to Connect</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Date Availability</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Local Rep</fullName>
            </value>
            <value>
                <fullName>Not Interested / No Reason Given</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Recently Certified</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Bad Contact Info</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>