force-app/main/default/objects/Activity/fields/Call_Result_Detail_2__c.field-meta.xml
<CustomField>
    <fullName>Call_Result_Detail_2__c</fullName>
    <inlineHelpText>Details of the call result</inlineHelpText>
    <label>Call Result Detail 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Result_Detail_1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Group Size</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>NAN</fullName>
            </value>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Full Service</fullName>
            </value>
            <value>
                <fullName>Shopping</fullName>
            </value>
            <value>
                <fullName>Too High</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>ARC AP</fullName>
            </value>
            <value>
                <fullName>ARC Community</fullName>
            </value>
            <value>
                <fullName>ARC Full Service</fullName>
            </value>
            <value>
                <fullName>Competitor - AP</fullName>
            </value>
            <value>
                <fullName>Competitor - Full Service</fullName>
            </value>
            <value>
                <fullName>Competitor - Group Size</fullName>
            </value>
            <value>
                <fullName>Local Rep</fullName>
            </value>
            <value>
                <fullName>ARC Community - Group Size</fullName>
            </value>
            <value>
                <fullName>ARC Community - Other</fullName>
            </value>
            <value>
                <fullName>ARC Community - Price</fullName>
            </value>
            <value>
                <fullName>Demo - No Fee Class</fullName>
            </value>
            <value>
                <fullName>Field Non BGST Class</fullName>
            </value>
            <value>
                <fullName>FO Other</fullName>
            </value>
            <value>
                <fullName>RCO Website</fullName>
            </value>
            <value>
                <fullName>Pending Agreement/Proposal</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Wrong Email</fullName>
            </value>
            <value>
                <fullName>Wrong Phone Number</fullName>
            </value>
            <value>
                <fullName>Wrong POC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>