force-app/main/default/objects/Activity/fields/Call_Source__c.field-meta.xml
<CustomField>
    <fullName>Call_Source__c</fullName>
    <inlineHelpText>Origin of the call</inlineHelpText>
    <label>Call Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IVR</fullName>
            </value>
            <value>
                <fullName>TSC Transfer</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Voice Mail</fullName>
            </value>
            <value>
                <fullName>After-Hours Transfer Lead Form</fullName>
            </value>
            <value>
                <fullName>Referral/Repeat Business</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>