force-app/main/default/objects/Activity/fields/DM_Legacy_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>DM_Legacy_Owner_Name__c</fullName>
    <label>DM Legacy Owner Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>